Added media query for 'max-width: 800px' for '#dashNavLister.dash-nav'in 'lister/dashboard.html' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/lister/dashboard.html
+++ b/BeginnersPad v2/lister/dashboard.html
@@ -63,7 +63,7 @@
 
     <section class="section-dash">
         <!-- Dashboard navbar -->
-        <div class="dash-nav">
+        <div class="dash-nav" id="dashNavLister">
             <ul>
                 <li><a href="#dashProfile">Profile</a></li>
                 <li><a href="#dashListings">Listings</a></li>
