Added 'charts-lister-dashboard.js' to 'Beginners Pad v2'.

--- a/BeginnersPad v2/lister/dashboard.html
+++ b/BeginnersPad v2/lister/dashboard.html
@@ -298,7 +298,7 @@
                 </div>
                 <div class="charts">
                     <div class="chart">
-                        <canvas id="chartDashTicketsLister" width="250" height="300"></canvas>
+                        <canvas id="chartDashListerTickets" width="250" height="300"></canvas>
                     </div>
                 </div>
             </div>
