--- a/BeginnersPad v2/lister/dashboard.html
+++ b/BeginnersPad v2/lister/dashboard.html
@@ -328,7 +328,7 @@
     </section>
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.4.1/chart.js"></script>
-    <script src="/js/charts.js"></script>
+    <script src="/js/charts-lister-dashboard.js"></script>
     <script src="/js/nav-drawer.js"></script>
     <script src="/js/css-base.js"></script>
 </body>
