Added HTML markup to '/admin/view-listings.html' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/admin/dashboard.html
+++ b/BeginnersPad v2/admin/dashboard.html
@@ -23,11 +23,11 @@
                 <li><a href="/help.html"><i class="fas fa-question-circle"></i> Help</a></li>
             </div>
             <div class="badge">
-                <span class="badge-mark">1</span>
+                <span class="badge-mark">4</span>
                 <li><a href="#"><i class="fas fa-user-circle"></i> Account</a></li>
             </div>
             <div class="badge" id="navDrawerOpen">
-                <span class="badge-mark">3</span>
+                <span class="badge-mark">12</span>
                 <li><i class="fas fa-bars"></i></li>
             </div>
         </ul>
@@ -56,7 +56,7 @@
         <div class="nav-drawer-category">
             <p>Listings</p>
             <ul>
-                <li><a href="/view-listings.html">View all</a></li>
+                <li><a href="/admin/view-listings.html">View all</a></li>
                 <li><a href="/admin/manage-listings.html">Manage</a></li>
                 <li><a href="/admin/manage-listings-logs.html">Listing management log</a></li>
                 <li><a href="/admin/manage-listings-reviews.html">Manage reviews</a></li>
