--- a/BeginnersPad v2/view-listings.html
+++ b/BeginnersPad v2/view-listings.html
@@ -256,12 +256,12 @@
                 </div>
             </div>
         </div>
-    </section>    
+    </section>
 
     <!-- Footer -->
-    <footer>
+    <!-- <footer>
         <p>&copy; 2021 Beginners Pad</p>
-    </footer>
+    </footer> -->
 
     <script src="js/search-bar-scroll.js"></script>
     <script src="js/css-base.js"></script>
