Added HTML markup to '/admin/bookmarks.html' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/admin/view-listings.html
+++ b/BeginnersPad v2/admin/view-listings.html
@@ -49,14 +49,14 @@
         <div class="nav-drawer-category">
             <p>Menu</p>
             <ul>
-                <li class="selected"><a href="/admin/dashboard.html">Dashboard</a></li>
+                <li><a href="/admin/dashboard.html">Dashboard</a></li>
                 <li><a href="/admin/bookmarks.html">Bookmarks</a></li>
             </ul>
         </div>
         <div class="nav-drawer-category">
             <p>Listings</p>
             <ul>
-                <li><a href="/view-listings.html">View all</a></li>
+                <li class="selected"><a href="/view-listings.html">View all</a></li>
                 <li><a href="/admin/manage-listings.html">Manage</a></li>
                 <li><a href="/admin/manage-listings-logs.html">Listing management log</a></li>
                 <li><a href="/admin/manage-listings-reviews.html">Manage reviews</a></li>
@@ -67,7 +67,7 @@
         <div class="nav-drawer-category">
             <p>Users</p>
             <ul>
-                <li><a href="/view-users.html">View all</a></li>
+                <li><a href="/admin/view-users.html">View all</a></li>
                 <li><a href="/admin/manage-users.html">Manage</a></li>
                 <li><a href="/admin/manage-users-logs.html">Management log</a></li>
             </ul>
