Added '/admin/manage-listings-logs.html' to 'Beginners Pad v2'.

--- a/BeginnersPad v2/admin/manage-listings.html
+++ b/BeginnersPad v2/admin/manage-listings.html
@@ -142,6 +142,7 @@
                     <button>Rejected</button>
                     <button>Suspended</button>
                     <button>Hidden/Private</button>
+                    <button>Log</button>
                 </div>
                 <div class="btn-grp vertical">
                     <button class="selected">All</button>
@@ -150,6 +151,7 @@
                     <button>Rejected</button>
                     <button>Suspended</button>
                     <button>Hidden/Private</button>
+                    <button>Log</button>
                 </div>
             </div>
             <div class="container-btn-dropdown">
