--- a/BeginnersPad v2/admin/manage-listings-logs.html
+++ b/BeginnersPad v2/admin/manage-listings-logs.html
@@ -119,54 +119,56 @@
     </div>
 
     <section>
-        <div class="btn-grp horizontal">
-            <button class="selected">My activity</button>
-            <button>All admins</button>
-        </div>
-        <div class="table-grp">
-            <h4 class="table-title">Listing management log</h4>
-            <table>
-                <tr>
-                    <th>#</th>
-                    <th>Listing</th>
-                    <th>Unit</th>
-                    <th>Action</th>
-                    <th>Reason</th>
-                    <th>Timestamp</th>
-                </tr>
-                <tr>
-                    <td>4</td>
-                    <td>Listing name</td>
-                    <td>Unit name</td>
-                    <td>action</td>
-                    <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Beatae, dolorum!</td>
-                    <td>01-01-2021 00:00:00</td>
-                </tr>
-                <tr>
-                    <td>3</td>
-                    <td>Listing name</td>
-                    <td>Unit name</td>
-                    <td>action</td>
-                    <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Beatae, dolorum!</td>
-                    <td>01-01-2021 00:00:00</td>
-                </tr>
-                <tr>
-                    <td>2</td>
-                    <td>Listing name</td>
-                    <td>Unit name</td>
-                    <td>action</td>
-                    <td>none</td>
-                    <td>01-01-2021 00:00:00</td>
-                </tr>
-                <tr>
-                    <td>1</td>
-                    <td>Listing name</td>
-                    <td>Unit name</td>
-                    <td>action</td>
-                    <td>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat provident earum illum quidem obcaecati similique nobis nam magni quasi itaque.</td>
-                    <td>01-01-2021 00:00:00</td>
-                </tr>
-            </table>
+        <div class="container">
+            <div class="btn-grp horizontal">
+                <button class="selected">My activity</button>
+                <button>All admins</button>
+            </div>
+            <div class="table-grp">
+                <h4 class="table-title">Listing management log</h4>
+                <table>
+                    <tr>
+                        <th>#</th>
+                        <th>Listing</th>
+                        <th>Unit</th>
+                        <th>Action</th>
+                        <th>Reason</th>
+                        <th>Timestamp</th>
+                    </tr>
+                    <tr>
+                        <td>4</td>
+                        <td>Listing name</td>
+                        <td>Unit name</td>
+                        <td>action</td>
+                        <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Beatae, dolorum!</td>
+                        <td>01-01-2021 00:00:00</td>
+                    </tr>
+                    <tr>
+                        <td>3</td>
+                        <td>Listing name</td>
+                        <td>Unit name</td>
+                        <td>action</td>
+                        <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Beatae, dolorum!</td>
+                        <td>01-01-2021 00:00:00</td>
+                    </tr>
+                    <tr>
+                        <td>2</td>
+                        <td>Listing name</td>
+                        <td>Unit name</td>
+                        <td>action</td>
+                        <td>none</td>
+                        <td>01-01-2021 00:00:00</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Listing name</td>
+                        <td>Unit name</td>
+                        <td>action</td>
+                        <td>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat provident earum illum quidem obcaecati similique nobis nam magni quasi itaque.</td>
+                        <td>01-01-2021 00:00:00</td>
+                    </tr>
+                </table>
+            </div>
         </div>
     </section>
     
