Added media queries for '/admin/manage-listings-logs.html' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/admin/manage-listings-logs.html
+++ b/BeginnersPad v2/admin/manage-listings-logs.html
@@ -118,7 +118,7 @@
         </div>
     </div>
 
-    <section>
+    <section id="sectionTable">
         <div class="container">
             <div class="btn-grp horizontal">
                 <button class="selected">My activity</button>
