Removed 'Hidden/Private' button from '/admin/manage-listings.html' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/admin/manage-listings-logs.html
+++ b/BeginnersPad v2/admin/manage-listings-logs.html
@@ -57,8 +57,8 @@
             <p>Listings</p>
             <ul>
                 <li><a href="/view-listings.html">View all</a></li>
-                <li class="selected"><a href="/admin/manage-listings.html">Manage</a></li>
-                <li><a href="/admin/manage-listings-logs.html">Listing management log</a></li>
+                <li><a href="/admin/manage-listings.html">Manage</a></li>
+                <li class="selected"><a href="/admin/manage-listings-logs.html">Listing management log</a></li>
                 <li><a href="/admin/manage-listings-reviews.html">Manage reviews</a></li>
                 <li><a href="/admin/listing-applications.html">Applications</a></li>
                 <li><a href="/admin/listing-applications-logs.html">Application management log</a></li>
