--- a/BeginnersPad v2/admin/manage-listings.html
+++ b/BeginnersPad v2/admin/manage-listings.html
@@ -155,7 +155,7 @@
             <div class="listing-units-list">
                 <div class="listing-units-grp">
                     <div class="card-sm card-2">
-                        <a href="/lister/view-my-listing.html">
+                        <a href="/admin/manage-listing.html">
                             <div class="thumb"></div>
                             <div class="details">
                                 <h2>Listing name</h2>
@@ -179,7 +179,7 @@
                         </a>  
                     </div>
                     <div class="card-sm card-2">
-                        <a href="/lister/view-my-listing.html">
+                        <a href="/admin/manage-listing.html">
                             <div class="thumb"></div>
                             <div class="details">
                                 <h2>Listing name</h2>
@@ -203,7 +203,7 @@
                         </a>  
                     </div>
                     <div class="card-sm card-2">
-                        <a href="/lister/view-my-listing.html">
+                        <a href="/admin/manage-listing.html">
                             <div class="thumb"></div>
                             <div class="details">
                                 <h2>Listing name</h2>
@@ -220,7 +220,7 @@
                         </a>  
                     </div>
                     <div class="card-sm card-2">
-                        <a href="/lister/view-my-listing.html">
+                        <a href="/admin/manage-listing.html">
                             <div class="thumb"></div>
                             <div class="details">
                                 <h2>Listing name</h2>
@@ -244,7 +244,7 @@
                         </a>  
                     </div>
                     <div class="card-sm card-2">
-                        <a href="/lister/view-my-listing.html">
+                        <a href="/admin/manage-listing.html">
                             <div class="thumb"></div>
                             <div class="details">
                                 <h2>Listing name</h2>
@@ -268,7 +268,7 @@
                         </a>  
                     </div>
                     <div class="card-sm card-2">
-                        <a href="/lister/view-my-listing.html">
+                        <a href="/admin/manage-listing.html">
                             <div class="thumb"></div>
                             <div class="details">
                                 <h2>Listing name</h2>
@@ -285,7 +285,7 @@
                         </a>  
                     </div>
                     <div class="card-sm card-2">
-                        <a href="/lister/view-my-listing.html">
+                        <a href="/admin/manage-listing.html">
                             <div class="thumb"></div>
                             <div class="details">
                                 <h2>Listing name</h2>
@@ -302,7 +302,7 @@
                         </a>  
                     </div>
                     <div class="card-sm card-2">
-                        <a href="/lister/view-my-listing.html">
+                        <a href="/admin/manage-listing.html">
                             <div class="thumb"></div>
                             <div class="details">
                                 <h2>Listing name</h2>
@@ -326,7 +326,7 @@
                         </a>  
                     </div>
                     <div class="card-sm card-2">
-                        <a href="/lister/view-my-listing.html">
+                        <a href="/admin/manage-listing.html">
                             <div class="thumb"></div>
                             <div class="details">
                                 <h2>Listing name</h2>
@@ -350,7 +350,7 @@
                         </a>  
                     </div>
                     <div class="card-sm card-2">
-                        <a href="/lister/view-my-listing.html">
+                        <a href="/admin/manage-listing.html">
                             <div class="thumb"></div>
                             <div class="details">
                                 <h2>Listing name</h2>
