Added HTML syntax to '/admin/manage-listings-reviews.html' to 'Beginners Pad v2'.

--- a/BeginnersPad v2/view-listing-reviews.html
+++ b/BeginnersPad v2/view-listing-reviews.html
@@ -183,9 +183,9 @@
     </section>
 
     <!-- Footer -->
-    <footer>
+    <!-- <footer>
         <p>&copy; 2021 Beginners Pad</p>
-    </footer>
+    </footer> -->
     <script src="js/css-base.js"></script>
 </body>
 </html>
