Added HTML markup to '/admin/manage-listings-reviews.html' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/admin/manage-listing-reviews.html
+++ b/BeginnersPad v2/admin/manage-listing-reviews.html
@@ -145,6 +145,7 @@
                     <button class="selected">All</button>
                     <button>Muted</button>
                     <button>Unmuted</button>
+                    <button>Reported</button>
                 </div>
             </div>
             <div class="listing-reviews">
