Added styling for '/admin/manage-listings-reviews.html' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/admin/manage-listings-reviews.html
+++ b/BeginnersPad v2/admin/manage-listings-reviews.html
@@ -134,16 +134,17 @@
                             <div class="thumb"></div>
                         </a>
                         <div class="plus-info">
-                            <h4 class="listing">Listing name</h4>
+                            <h3 class="listing">Listing name</h3>
                             <div class="occupant-details">
                                 <a href="/admin/view-user.html"><img src="/images/avatar.png" alt=""></a>
                                 <h4 class="occupant"><a href="/admin/view-user.html">User name</a></h4>
                             </div>
-                            <p class="reveiw">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil et voluptatum veniam fugit unde ipsum illo est, officiis
+                            <p class="review txt-triple-line">
+                                <a href="/admin/manage-listing-review.html">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil et voluptatum veniam fugit unde ipsum illo est, officiis
                                 harum? Porro molestias atque commodi ullam ea explicabo dicta minus soluta doloribus facilis, enim ipsum eveniet amet
                                 dolores quidem distinctio ipsam adipisci laborum ut? Quae omnis cupiditate illum iusto nesciunt itaque excepturi optio
                                 sed, in ratione odit quasi pariatur architecto vero, placeat laboriosam illo sit non! Architecto officia recusandae
-                                veniam atque ipsum.
+                                veniam atque ipsum.</a>
                             </p>
                             <div class="plus-rating">
                                 <div class="stars">
@@ -162,16 +163,17 @@
                             <div class="thumb"></div>
                         </a>
                         <div class="plus-info">
-                            <h4 class="listing">Listing name</h4>
+                            <h3 class="listing">Listing name</h3>
                             <div class="occupant-details">
                                 <a href="/admin/view-user.html"><img src="/images/avatar.png" alt=""></a>
                                 <h4 class="occupant"><a href="/admin/view-user.html">User name</a></h4>
                             </div>
-                            <p class="reveiw">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil et voluptatum veniam fugit unde ipsum illo est, officiis
+                            <p class="review txt-triple-line">
+                                <a href="/admin/manage-listing-review.html">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil et voluptatum veniam fugit unde ipsum illo est, officiis
                                 harum? Porro molestias atque commodi ullam ea explicabo dicta minus soluta doloribus facilis, enim ipsum eveniet amet
                                 dolores quidem distinctio ipsam adipisci laborum ut? Quae omnis cupiditate illum iusto nesciunt itaque excepturi optio
                                 sed, in ratione odit quasi pariatur architecto vero, placeat laboriosam illo sit non! Architecto officia recusandae
-                                veniam atque ipsum.
+                                veniam atque ipsum.</a>
                             </p>
                             <div class="plus-rating">
                                 <div class="stars">
@@ -190,16 +192,17 @@
                             <div class="thumb"></div>
                         </a>
                         <div class="plus-info">
-                            <h4 class="listing">Listing name</h4>
+                            <h3 class="listing">Listing name</h3>
                             <div class="occupant-details">
                                 <a href="/admin/view-user.html"><img src="/images/avatar.png" alt=""></a>
                                 <h4 class="occupant"><a href="/admin/view-user.html">User name</a></h4>
                             </div>
-                            <p class="reveiw">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil et voluptatum veniam fugit unde ipsum illo est, officiis
+                            <p class="review txt-triple-line">
+                                <a href="/admin/manage-listing-review.html">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil et voluptatum veniam fugit unde ipsum illo est, officiis
                                 harum? Porro molestias atque commodi ullam ea explicabo dicta minus soluta doloribus facilis, enim ipsum eveniet amet
                                 dolores quidem distinctio ipsam adipisci laborum ut? Quae omnis cupiditate illum iusto nesciunt itaque excepturi optio
                                 sed, in ratione odit quasi pariatur architecto vero, placeat laboriosam illo sit non! Architecto officia recusandae
-                                veniam atque ipsum.
+                                veniam atque ipsum.</a>
                             </p>
                             <div class="plus-rating">
                                 <div class="stars">
@@ -218,16 +221,17 @@
                             <div class="thumb"></div>
                         </a>
                         <div class="plus-info">
-                            <h4 class="listing">Listing name</h4>
+                            <h3 class="listing">Listing name</h3>
                             <div class="occupant-details">
                                 <a href="/admin/view-user.html"><img src="/images/avatar.png" alt=""></a>
                                 <h4 class="occupant"><a href="/admin/view-user.html">User name</a></h4>
                             </div>
-                            <p class="reveiw">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil et voluptatum veniam fugit unde ipsum illo est, officiis
+                            <p class="review txt-triple-line">
+                                <a href="/admin/manage-listing-review.html">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil et voluptatum veniam fugit unde ipsum illo est, officiis
                                 harum? Porro molestias atque commodi ullam ea explicabo dicta minus soluta doloribus facilis, enim ipsum eveniet amet
                                 dolores quidem distinctio ipsam adipisci laborum ut? Quae omnis cupiditate illum iusto nesciunt itaque excepturi optio
                                 sed, in ratione odit quasi pariatur architecto vero, placeat laboriosam illo sit non! Architecto officia recusandae
-                                veniam atque ipsum.
+                                veniam atque ipsum.</a>
                             </p>
                             <div class="plus-rating">
                                 <div class="stars">
