Added HTML markup to '/admin/manage-listing-pending.html' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/admin/listing-applications.html
+++ b/BeginnersPad v2/admin/listing-applications.html
@@ -179,7 +179,7 @@
             <div class="listing-units-list">
                 <div class="listing-units-grp">
                     <div class="card-sm card-2">
-                        <a href="/admin/manage-listing.html">
+                        <a href="/admin/manage-listing-pending.html">
                             <div class="thumb"></div>
                             <div class="details">
                                 <h2>Listing name</h2>
@@ -196,7 +196,7 @@
                         </a>  
                     </div>
                     <div class="card-sm card-2">
-                        <a href="/admin/manage-listing.html">
+                        <a href="/admin/manage-listing-pending.html">
                             <div class="thumb"></div>
                             <div class="details">
                                 <h2>Listing name</h2>
@@ -213,7 +213,7 @@
                         </a>  
                     </div>
                     <div class="card-sm card-2">
-                        <a href="/admin/manage-listing.html">
+                        <a href="/admin/manage-listing-pending.html">
                             <div class="thumb"></div>
                             <div class="details">
                                 <h2>Listing name</h2>
@@ -230,7 +230,7 @@
                         </a>  
                     </div>
                     <div class="card-sm card-2">
-                        <a href="/admin/manage-listing.html">
+                        <a href="/admin/manage-listing-pending.html">
                             <div class="thumb"></div>
                             <div class="details">
                                 <h2>Listing name</h2>
@@ -247,7 +247,7 @@
                         </a>  
                     </div>
                     <div class="card-sm card-2">
-                        <a href="/admin/manage-listing.html">
+                        <a href="/admin/manage-listing-pending.html">
                             <div class="thumb"></div>
                             <div class="details">
                                 <h2>Listing name</h2>
@@ -264,7 +264,7 @@
                         </a>  
                     </div>
                     <div class="card-sm card-2">
-                        <a href="/admin/manage-listing.html">
+                        <a href="/admin/manage-listing-pending.html">
                             <div class="thumb"></div>
                             <div class="details">
                                 <h2>Listing name</h2>
@@ -281,7 +281,7 @@
                         </a>  
                     </div>
                     <div class="card-sm card-2">
-                        <a href="/admin/manage-listing.html">
+                        <a href="/admin/manage-listing-pending.html">
                             <div class="thumb"></div>
                             <div class="details">
                                 <h2>Listing name</h2>
@@ -298,7 +298,7 @@
                         </a>  
                     </div>
                     <div class="card-sm card-2">
-                        <a href="/admin/manage-listing.html">
+                        <a href="/admin/manage-listing-pending.html">
                             <div class="thumb"></div>
                             <div class="details">
                                 <h2>Listing name</h2>
@@ -315,7 +315,7 @@
                         </a>  
                     </div>
                     <div class="card-sm card-2">
-                        <a href="/admin/manage-listing.html">
+                        <a href="/admin/manage-listing-pending.html">
                             <div class="thumb"></div>
                             <div class="details">
                                 <h2>Listing name</h2>
@@ -332,7 +332,7 @@
                         </a>  
                     </div>
                     <div class="card-sm card-2">
-                        <a href="/admin/manage-listing.html">
+                        <a href="/admin/manage-listing-pending.html">
                             <div class="thumb"></div>
                             <div class="details">
                                 <h2>Listing name</h2>
