Updated links in '/admin/bookmarks.html' and '/admin/manage-listing-unit.html' to reference items in '/admin' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/admin/bookmarks.html
+++ b/BeginnersPad v2/admin/bookmarks.html
@@ -139,7 +139,7 @@
         <div class="container">
             <div class="favourites-grp">
                 <div class="fav unit">
-                    <a href="/view-listing-unit.html">
+                    <a href="/admin/manage-listing-unit.html">
                         <div class="thumb"></div>
                         <div class="details">
                             <h3 class="txt-single-line">Unit title</h3>
@@ -162,7 +162,7 @@
                     <button class="btn-link btn-close"><i class="fas fa-times"></i></button>
                 </div>
                 <div class="fav unit">
-                    <a href="/view-listing-unit.html">
+                    <a href="/admin/manage-listing-unit.html">
                         <div class="thumb"></div>
                         <div class="details">
                             <h3 class="txt-single-line">Unit title</h3>
@@ -185,7 +185,7 @@
                     <button class="btn-link btn-close"><i class="fas fa-times"></i></button>
                 </div>
                 <div class="fav listing">
-                    <a href="/view-listing.html">
+                    <a href="/admin/manage-listing.html">
                         <div class="thumb"></div>
                         <div class="details">
                             <h3 class="txt-single-line">Listing name</h3>
@@ -210,7 +210,7 @@
                     <button class="btn-link btn-close"><i class="fas fa-times"></i></button>
                 </div>
                 <div class="fav unit">
-                    <a href="/view-listing-unit.html">
+                    <a href="/admin/manage-listing-unit.html">
                         <div class="thumb"></div>
                         <div class="details">
                             <h3 class="txt-single-line">Unit title</h3>
@@ -233,7 +233,7 @@
                     <button class="btn-link btn-close"><i class="fas fa-times"></i></button>
                 </div>
                 <div class="fav listing">
-                    <a href="/view-listing.html">
+                    <a href="/admin/manage-listing.html">
                         <div class="thumb"></div>
                         <div class="details">
                             <h3 class="txt-single-line">Listing name</h3>
@@ -284,7 +284,7 @@
                     <button class="btn-link btn-close"><i class="fas fa-times"></i></button>
                 </div>
                 <div class="fav unit">
-                    <a href="/view-listing-unit.html">
+                    <a href="/admin/manage-listing-unit.html">
                         <div class="thumb"></div>
                         <div class="details">
                             <h3 class="txt-single-line">Unit title</h3>
@@ -307,7 +307,7 @@
                     <button class="btn-link btn-close"><i class="fas fa-times"></i></button>
                 </div>
                 <div class="fav unit">
-                    <a href="/view-listing-unit.html">
+                    <a href="/admin/manage-listing-unit.html">
                         <div class="thumb"></div>
                         <div class="details">
                             <h3 class="txt-single-line">Unit title</h3>
@@ -330,7 +330,7 @@
                     <button class="btn-link btn-close"><i class="fas fa-times"></i></button>
                 </div>
                 <div class="fav listing">
-                    <a href="/view-listing.html">
+                    <a href="/admin/manage-listing.html">
                         <div class="thumb"></div>
                         <div class="details">
                             <h3 class="txt-single-line">Listing name</h3>
@@ -355,7 +355,7 @@
                     <button class="btn-link btn-close"><i class="fas fa-times"></i></button>
                 </div>
                 <div class="fav unit">
-                    <a href="/view-listing-unit.html">
+                    <a href="/admin/manage-listing-unit.html">
                         <div class="thumb"></div>
                         <div class="details">
                             <h3 class="txt-single-line">Unit title</h3>
@@ -378,7 +378,7 @@
                     <button class="btn-link btn-close"><i class="fas fa-times"></i></button>
                 </div>
                 <div class="fav listing">
-                    <a href="/view-listing.html">
+                    <a href="/admin/manage-listing.html">
                         <div class="thumb"></div>
                         <div class="details">
                             <h3 class="txt-single-line">Listing name</h3>
