--- a/BeginnersPad v2/admin/manage-listing-unit.html
+++ b/BeginnersPad v2/admin/manage-listing-unit.html
@@ -263,7 +263,7 @@
                         <h3>Property</h3>
                         <div class="listing-units-grp">
                             <div class="card-sm card-2">
-                                <a href="/view-listing.html">
+                                <a href="/admin/manage-listing.html">
                                     <div class="thumb"></div>
                                     <div class="details">
                                         <h2>Listing name</h2>
