--- a/BeginnersPad v2/admin/view-user-beginner.html
+++ b/BeginnersPad v2/admin/view-user-beginner.html
@@ -108,7 +108,41 @@
         </div>
     </div>
 
-    
+    <section class="section-user" id="sectionUserProfile">
+        <div class="container">
+            <div class="profile primary">
+                <div class="card-user">
+                    <h4 class="title">User profile</h4>
+                    <div class="details">
+                        <img src="/images/avatar.png" alt="">
+                        <div class="text">
+                            <h3 class="name">Name</h3>
+                            <h4 class="username">username</h4>
+                            <p class="account">User type: <span>beginner</span></p>
+                            <p class="time">Registered on: <span>01-01-2021</span></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="profile">
+                <div class="card-user">
+                    <p>Email address: beginner@user.com</p>
+                    <p>Last logged in on: 01-01-2021 00:00:00</p>
+                    <p>Account status: active</p>
+                    <p>Phone number: +254700000000</p>
+                </div>
+            </div>
+            <div class="profile">
+                <div class="card-user">
+                    <p>Count of listings occupied: 0</p>
+                    <p>Count of listing reviews: 0</p>
+                    <p>Last listing occupied on: N/A</p>
+                    <p>Last review made on: N/A</p>
+                    <p>Times suspended: 0</p>
+                </div>
+            </div>
+        </div>
+    </section>
     
     <script src="/js/nav-drawer.js"></script>
     <script src="/js/css-base.js"></script>
